--- a/osUser/src/main/webapp/error/404.html
+++ b/osUser/src/main/webapp/error/404.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link href="css/404.css" rel="stylesheet" type="text/css" media="all" />
+		<link href="../css/404.css" rel="stylesheet" type="text/css" media="all" />
 	</head>
 	<body>
 		<div class="wrap">
 			<div class="content">
-				<img src="images/error-img.png" title="error" />
+				<img src="../images/error-img.png" title="error" />
 				<p><span><label>O</label>hh.....</span>You Requested the page that is no longer There.</p>
-				<a href="../page/index.jsp">Back To Home</a>
+				<a href="../WEB-INF/page/index.jsp">Back To Home</a>
    			</div>
 		</div>
 	</body>
